Bug(Search Bar): Header Searchbar Layout Issue on Product Search

--- a/scss/template/search-bar.scss
+++ b/scss/template/search-bar.scss
@@ -34,12 +34,6 @@ header{
                 } 
                 .o-search-panel{
                     top: 96px;
-                    @media screen and (max-width: 767px){
-                        height: calc(100vh - 97px);
-                        .container{
-                            height: 100%;
-                        }
-                    }
                     .no-results{
                         height: auto;
                         line-height: normal;
